--- a/EVStation-basedRentalSystem/Views/Cars/Details.cshtml
+++ b/EVStation-basedRentalSystem/Views/Cars/Details.cshtml
@@ -59,10 +59,22 @@
             @Html.DisplayFor(model => model.RentPricePerDay)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.RentPricePerHour)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.RentPricePerHour)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ImageUrl)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Status)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedAt)
