--- a/EVStation-basedRentalSystem/Views/Cars/Index.cshtml
+++ b/EVStation-basedRentalSystem/Views/Cars/Index.cshtml
@@ -37,7 +37,13 @@
                 @Html.DisplayNameFor(model => model.RentPricePerDay)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.RentPricePerHour)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ImageUrl)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CreatedAt)
@@ -79,7 +85,13 @@
                 @Html.DisplayFor(modelItem => item.RentPricePerDay)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.RentPricePerHour)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.ImageUrl)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedAt)
